# BelediyeAtikSistemiV2

./: .env.example  .gitignore  README.md  alembic.ini  compose.yml  pyproject.toml
backend/: __init__.py
backend/alembic/: README  env.py
backend/alembic/versions/: 00f31c245a1a_create_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  finance.py  fleet.py  health.py  maintenance.py  operations.py  recycling.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  base.py  entities.py  enums.py
backend/app/schemas/: __init__.py  auth.py  common.py  finance.py  fleet.py  maintenance.py  operations.py  recycling.py
backend/app/services/: __init__.py  audit.py  auth.py  finance.py  fleet.py  maintenance.py  operations.py  recycling.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_maintenance_finance.py  test_models.py  test_operations.py  test_recycling.py
desktop/: README.md
docs/: backend-setup.md  git-remote-setup.md
memory-bank/: activeContext.md  decisions.md  open-questions.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  uml-validation.md  workflow.md
